新增菊花加载更多组件

--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
     "pages": [
         "pages/index/index",
         "pages/key-board/key-board",
-        "pages/city-select/city-select"
+        "pages/city-select/city-select",
+        "pages/load-more/load-more"
     ],
     "window": {
         "backgroundTextStyle": "light",
@@ -12,6 +13,7 @@
     },
     "usingComponents": {
         "key-board": "/components/key-board/key-board",
+        "load-more": "/components/load-more/load-more",
         "city-select": "/components/city-select/city-select"
     }
 }
