--- a/project.config.json
+++ b/project.config.json
@@ -37,7 +37,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 2,
+			"current": 3,
 			"list": [
 				{
 					"id": -1,
@@ -57,6 +57,13 @@
 					"id": 2,
 					"name": "菊花暂无更多",
 					"pathName": "pages/load-more/load-more",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "固定的背景图片",
+					"pathName": "pages/background-attachment/background-attachment",
 					"query": "",
 					"scene": null
 				}
