更新Demo。（1）滑动操作，（2）scroll-viewY轴点击居中效果

--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
         "pages/city-select/city-select",
         "pages/load-more/load-more",
         "pages/background-attachment/background-attachment",
-        "pages/sliding-operation/sliding-operation"
+        "pages/sliding-operation/sliding-operation",
+        "pages/scroll-viewY/scroll-viewY"
     ],
     "window": {
         "backgroundTextStyle": "light",
